--- a/web/styles/product.css
+++ b/web/styles/product.css
@@ -73,7 +73,7 @@ footer{
    background: linear-gradient(-45deg, white,orange, black); 
    border-top: 3px solid black;
    text-align: center;
-   margin-top: 550px;
+   margin-top: 555px;
    
 }
 
@@ -152,3 +152,9 @@ a:hover {
   
   color: green ;
 } 
+h1{
+    margin-top: 0px;
+}
+p{
+    margin-bottom: 0px;
+}
